src/test/ui/generator/ref-escapes-but-not-over-yield.stderr
error[E0597]: `b` does not live long enough
  --> $DIR/ref-escapes-but-not-over-yield.rs:24:14
   |
LL |         a = &b;
   |              ^ borrowed value does not live long enough
LL |         //~^ ERROR `b` does not live long enough
LL |     };
   |     - `b` dropped here while still borrowed
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0597"
